2750 [Worker]               fixed rare invisible progress window (regression of 2743)
2749 [Update]               fixed a rare crash when a restart is required and MeGUI is already closed
2748 [HD Streams Extractor] added detection of "core/embedded" tracks
                            removed the DTSHD "extract as" option
                            added the DTS_CORE "extract as" option
                            added settings menu:
                            - added option to select by default the (non-)HD tracks (defaults to non-HD)
                            - moved the language track selection option from the global settings into the new menu
                            - added settings to inlcude the encoding and/or all demuxer "extract as" options
                              AAC encoding is only available if neroaacenc.exe is found in the eac3to directory
2747 [Worker]               improved handling of multiple worker instances. part II
2746 [Worker]               improved handling of multiple worker instances
2745 [Main]                 added option to extend logging
2744 [Worker]               improved child process priority handling. part II
2743 [Worker]               improved child process priority handling
2742 [Main]                 improved OS detection
2741 [MediaInfo]            fixed chapter detection
                            prevent MediaInfo from locking the GUI
2740 [OneClick]             disable controls while input detection is ongoing
2739 [MediaInfo]            removed the external dependency to MediaInfoWrapper.dll
2738 [OneClick]             fixed detection of audio track names
2737 [Muxer] + [OneClick]   removed unnecessary "X" buttons
2736 [Update]               x64: fixed detection of the DGIndexIM package 
2735 [MP4 Muxer]            write always aspect ratio information to preserve anamorphic information. Bug #837