@@ -1,3 +1,4 @@
+2751 [HD Streams Extractor] improved handling of audio tracks with unknown parameters
 2750 [Worker]               fixed rare invisible progress window (regression of 2743)
 2749 [Update]               fixed a rare crash when a restart is required and MeGUI is already closed
 2748 [HD Streams Extractor] added detection of "core/embedded" tracks
